--- a/client/src/app/coins-view/coin-details/coin-details.component.css
+++ b/client/src/app/coins-view/coin-details/coin-details.component.css
@@ -1,10 +1,18 @@
 .container {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
-  margin-top: 150px;
+  align-content: center;
+  margin-top: 160px;
 }
 
-.display {
+section {
+  display: flex;
+  width: 900px;
+}
+
+/* .display {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,9 +24,9 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   width: 1400px;
   padding: 50px;
-}
+} */
 
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
-}
+} */
