--- a/client/src/app/coins-view/coin-details/coin-details.component.html
+++ b/client/src/app/coins-view/coin-details/coin-details.component.html
@@ -1,16 +1,10 @@
 <div class="container">
-  <div class="display">
-    <div class="header">
-      <div class="left-half">
-        <div class="coin-name">
-          <img src="{{(coinDetailsData$ | async)?.image?.small}}" alt="">
-          <h1>{{ (coinDetailsData$ | async)?.name}}</h1>
-          <strong>BTC</strong>
-        </div>
-      </div>
-      <div class="right-half">
-        <app-chart [data]="coinDetailsData$"></app-chart>
-      </div>
-    </div>
-  </div>
+  <section class="coin-info">
+      <img src="{{(coinDetailsData$ | async)?.image?.small}}" alt="">
+      <h1>{{ (coinDetailsData$ | async)?.name}}</h1>
+      <strong>BTC</strong>
+  </section>
+  <section class="chart-container">
+    <app-chart [data]="coinDetailsData$"></app-chart>
+  </section>
 </div>
