--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -2,9 +2,10 @@ h1 {
   margin: 250px 100px 200px 100px;
   text-align: center;
   color: white;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-weight: 200;
   font-size: 90px;
+  letter-spacing: 2px;
 }
 
 .container {
