--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -3,12 +3,10 @@ html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    background: no-repeat;
+    background-attachment: fixed;
 }
 
-body,
-html {
-    background: no-repeat;
-    /* background: linear-gradient(#0F131C, #450009); */
-    background-attachment: fixed;
+body {
     background-image: url("./assets/black-bg.webp");
 }
