--- a/client/src/app/home/crypto-card/crypto-card.component.html
+++ b/client/src/app/home/crypto-card/crypto-card.component.html
@@ -1,16 +1,17 @@
-<div class="card-box">
-  <div class="logo-container">
+<article class="card-box">
+  <header class="logo-container">
     <h3 class="crypto-title">{{ card.name }}</h3>
     <img src="{{ card.image }}" alt="coin-logo">
-  </div>
-  <div>
-    <div class="text-center">
-      <p><span class="label">Price:</span> ${{ card.current_price | number:'1.2-10' }}</p>
-      <p><span class="label">24h:</span> ${{ card.price_change_24h | number:'1.2-2' }}</p>
-      <p><span class="label">24h:</span> {{ card.price_change_percentage_24h | number:'1.2-2' }}%</p>
-    </div>
-    <div class="data-buttons">
-      <a class="button" routerLink="/coins/{{card.id}}">Details</a>
-    </div>
-  </div>
-</div>
+  </header>
+  <main class="text-center">
+    <p><span class="label">Price:</span>
+      {{ card.current_price | currency:'USD':'symbol':'1.2-10' }}</p>
+    <p><span class="label">24h:</span>
+      {{ card.price_change_24h | currency:'USD':'symbol':'1.2-2' }}</p>
+    <p><span class="label">24h:</span>
+      {{ card.price_change_percentage_24h / 100 | percent:'1.2-2' }}</p>
+  </main>
+  <footer class="data-buttons">
+    <a class="button" routerLink="/coins/{{card.id}}">Details</a>
+  </footer>
+</article>
