--- a/client/src/app/coins-view/coin-details/coin-details.component.html
+++ b/client/src/app/coins-view/coin-details/coin-details.component.html
@@ -89,3 +89,6 @@
     </footer>
   </article>
 </div>
+<div class="spinner-container" *ngIf="(isLoading$ | async)">
+  <app-loading-spinner class="spinner"></app-loading-spinner>
+</div>
