--- a/client/src/app/coins-view/coin-details/coin-details.component.html
+++ b/client/src/app/coins-view/coin-details/coin-details.component.html
@@ -82,7 +82,7 @@
         </tr>
       </table>
       <section class="chart-container">
-        <app-chart [data]="coinDetailsData$"></app-chart>
+        <app-chart [chart$]="coinDetailsChart$" [coinId]="id"></app-chart>
       </section>
     </main>
     <footer>
