--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -3,10 +3,10 @@ html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background: no-repeat;
-    background-attachment: fixed;
 }
 
 body {
-    background-image: url("./assets/black-bg.webp");
+    background-image: url("./assets/black-bg.webp") !important;
+    background: no-repeat;
+    background-attachment: fixed;
 }
