--- a/client/src/app/coins-view/coin-details/coin-details.component.css
+++ b/client/src/app/coins-view/coin-details/coin-details.component.css
@@ -75,7 +75,7 @@ header {
   position: absolute;
 }
 
-.low-high {
+.low-high-bar-titles {
   display: flex;
   justify-content: space-between;
   width: 500px;
