--- a/client/src/app/coins-view/coin-details/chart/chart.component.css
+++ b/client/src/app/coins-view/coin-details/chart/chart.component.css
@@ -7,7 +7,6 @@
   border-radius: 10px;
 }
 
-
 .buttons-container {
   display: flex;
   justify-content: flex-end;
@@ -26,4 +25,8 @@
 .buttons-container button:hover {
   background-color: #262626;
   cursor: pointer;
+}
+
+.buttons-container>button.selected {
+  background-color: #262626;
 }
