--- a/client/src/app/auth/login/login.component.css
+++ b/client/src/app/auth/login/login.component.css
@@ -39,6 +39,7 @@ form {
   display: block;
   border-bottom: black 1px solid;
   margin-top: 25px;
+  transition: border-bottom, ease, 600ms;
 }
 
 .input-container:has(.field > input.ng-invalid.ng-touched) {
@@ -109,7 +110,7 @@ input:-webkit-autofill:focus {
 
 button {
   background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #00DBDE 40%, #FC00FF 60%);
+  background-image: linear-gradient(90deg, #00DBDE 30%, #FC00FF 80%);
   border: none;
   border-radius: 10px;
   padding: 10px 30%;
@@ -120,7 +121,7 @@ button {
 
 button:disabled {
   background-color: #00DBDE;
-  background-image: linear-gradient(90deg, #000000 40%, #5a5a5a 60%);
+  background-image: linear-gradient(90deg, #000000 30%, #5a5a5a 80%);
   cursor: not-allowed;
 }
 
