--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -47,6 +47,7 @@ h1 {
 
 .input:has(> input.ng-invalid.ng-touched) {
   border-bottom: red 1px solid;
+  transition: border-color, ease, 600ms;
 }
 
 input {
@@ -192,6 +193,7 @@ button:disabled {
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.6);
 }
+
 .spinner {
   margin: 0;
   position: absolute;
